@@ -87,6 +87,8 @@ main(int ac, char **av) {
 			asn1_compiler_flags |= A1C_USE_NATIVE_TYPES;
 		} else if(strcmp(optarg, "no-constraints") == 0) {
 			asn1_compiler_flags |= A1C_NO_CONSTRAINTS;
+		} else if(strcmp(optarg, "no-include-deps") == 0) {
+			asn1_compiler_flags |= A1C_NO_INCLUDE_DEPS;
 		} else if(strcmp(optarg, "unnamed-unions") == 0) {
 			asn1_compiler_flags |= A1C_UNNAMED_UNIONS;
 		} else if(strcmp(optarg, "types88") == 0) {
@@ -313,6 +315,7 @@ usage(const char *av0) {
 "  -fknown-extern-type=<name>    Pretend this type is known\n"
 "  -fnative-types        Use \"long\" instead of INTEGER_t whenever possible, etc.\n"
 "  -fno-constraints      Do not generate constraint checking code\n"
+"  -fno-include-deps     Do not generate courtesy #includes for dependencies\n"
 "  -funnamed-unions      Enable unnamed unions in structures\n"
 "  -ftypes88             Pretend to support only ASN.1:1988 embedded types\n"
 "\n"
